--- a/lib/modules/mods/chat/web/style.css
+++ b/lib/modules/mods/chat/web/style.css
@@ -1,5 +1,4 @@
 * {
-    box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
@@ -19,6 +18,7 @@ body {
     grid-template-areas: "chat_header" "chat_main" ".";
     width: 100vw;
     height: 100vh;
+    background-color: white;
 }
 
 #chat_main {
@@ -36,6 +36,7 @@ body {
 
 #chat_saitoLogo {
     width: 35px;
+    height: 35px;
     margin-top: 5px;
     margin-right: 10px;
     margin-left: 10px;
