--- a/lib/modules/mods/chat/web/style.css
+++ b/lib/modules/mods/chat/web/style.css
@@ -32,6 +32,7 @@ body {
     grid-template-columns: 70% 30%;
     border-bottom: 1px solid #a5a5a5;
     font-size: 2em;
+    cursor: pointer;
 }
 
 #chat_saitoLogo {
