--- a/lib/modules/mods/email/web/style.css
+++ b/lib/modules/mods/email/web/style.css
@@ -555,12 +555,11 @@ td .from {
 }
 
 .email_title {
-  /* margin-top: 15px; */
-  /* max-width: 830px; */
   width: 100%;
   padding: 5px;
   font-size: 1.2em;
   border: 1px solid #a5a5a5;
+  margin-bottom: 10px;
 }
 
 .email_body {
