--- a/lib/modules/mods/reddit/web/style.css
+++ b/lib/modules/mods/reddit/web/style.css
@@ -235,7 +235,8 @@ textarea {
 .post {
  /* min-width: 600px; */
  min-height: 75px;
- padding-bottom: 20px;
+ /* padding-bottom: 20px; */
+ margin-bottom: 20px;
  clear:both;
 }
 .votes {
@@ -448,6 +449,7 @@ textarea {
  padding-left: 5px;
  padding-right: 5px;
  display: table-cell;
+ width:100%;
 }
 .comment_text {
 }
