--- a/lib/modules/mods/email/web/style.css
+++ b/lib/modules/mods/email/web/style.css
@@ -13,6 +13,14 @@
 }
 
 
+.settings_button {
+ padding-top:4px;
+ padding-bottom:4px;
+ padding-left:6px;
+ padding-right:6px;
+ font-size:1.em;
+}
+
 
 
 .body, body {
