--- a/lib/modules/mods/reddit/web/style.css
+++ b/lib/modules/mods/reddit/web/style.css
@@ -282,13 +282,13 @@ textarea {
 }
 .content_details {
  color: #474747;
- font-size:0.8em; 
+ font-size:0.8em;
  padding-top:4px;
  clear:both;
 }
 .content_links {
  color: #373737;
- font-size:0.85em; 
+ font-size:0.85em;
  font-weight: bold;
  padding-top: 4px;
  clear:all;
@@ -631,4 +631,9 @@ textarea {
         margin-right: 5px;
     }
 
+}
+blockquote {
+    border-left: 8px solid #d14836;
+    margin-left: 5px;
+    padding-left: 10px;
 }
